--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/videos/templates/assign-video.html
@@ -43,7 +43,7 @@
           <li style="width: 20%">
             {{v.remark || 'This is remark'}}
           </li>
-          <li style="width: 10%; text-align: center; position: relative;
+          <li style="width: 10%; text-align: center; position: relative;"
               ng-style="{'background-color': v.isShowTutor ? 'background-color: rgb(2,136,209);' : 'auto'}">
             <div ng-if="v.tutor.name_en || v.tutor.name_zh">
               <a style="cursor: pointer" ng-click="vm.showTutor(v)"
